Small code cleaning in spider2 codegen